tipo propiedades terminado

--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -8,14 +8,14 @@
 }
  
 .nombre-text {
-   font-family: 'Century Gothic';
+   font-family: 'Poppins', sans-serif;
    font-size: 16px;
    font-weight: 520;
    margin-left: 20px;
 }
 
 .anio-text {
-   font-family: 'Century Gothic';
+   font-family: 'Poppins', sans-serif;
    font-size: 16px;
    font-weight: 520;
    margin-right: 20px;
