--- a/src/assets/styles/NavBar.css
+++ b/src/assets/styles/NavBar.css
@@ -3,7 +3,7 @@
   }
   
   .nav-item {
-    font-family: 'Century Gothic';
+    font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 520;
     margin-left: 20px;
