--- a/src/assets/styles/logo.css
+++ b/src/assets/styles/logo.css
@@ -11,7 +11,7 @@
 }
   
 .logo-text {
-    font-family: 'Century Gothic';
+    font-family: 'Poppins', sans-serif;
     font-size: 16px;
     font-weight: 520;
     margin-left: 20px;
