--- a/src/assets/styles/footer.css
+++ b/src/assets/styles/footer.css
@@ -4,16 +4,16 @@
    box-sizing: border-box;
  }
 
- .texto-container {
+.texto-container {
    display: flex;
-   flex-direction: column; /* Cambiar a una estructura de columna */
+   flex-direction: column; 
    justify-content: center;
-   align-items: center; /* Centrar verticalmente */
+   align-items: center; 
    bottom: 0;
    left: 0;
    text-align: center;
 }
- 
+
 .nombre-text {
    font-family: 'Poppins', sans-serif;
    font-size: 16px;
